--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "torch>=2.9.0.dev20250720",
     "torchaudio>=2.8.0.dev20250720",
     "torchvision>=0.24.0.dev20250720",
+    "websockets",
 ]
 
 [tool.uv]
