--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "torchvision>=0.24.0.dev20250720",
     "websockets>=12.0",
     "pyyaml>=6.0.0",
+    "pandas>=2.3.3",
 ]
 
 [project.optional-dependencies]
