Rename 'aggressive' chess cluster to 'tactical' throughout codebase and documentation

--- a/chess-federated-learning/config/cluster_topology.yaml
+++ b/chess-federated-learning/config/cluster_topology.yaml
@@ -3,9 +3,9 @@
 # for the federated learning system.
 
 clusters:
-  # Aggressive playstyle cluster - focused on tactical, attacking chess
-  - id: "cluster_aggressive"
-    playstyle: "aggressive"
+  # tactical playstyle cluster - focused on tactical, attacking chess
+  - id: "cluster_tactical"
+    playstyle: "tactical"
     description: "Tactical, attacking chess with piece sacrifices and sharp positions"
     node_count: 4                   # Number of nodes for this cluster
     node_prefix: "agg"               # Prefix for node IDs (generates agg_001, agg_002, etc.)
@@ -18,7 +18,7 @@ clusters:
     node_prefix: "pos"               # Prefix for node IDs (generates pos_001, pos_002, etc.)
 
 # Configuration notes:
-# - Total nodes: 64 (32 aggressive + 32 positional)
+# - Total nodes: 64 (32 tactical + 32 positional)
 # - Node IDs are auto-generated: agg_001 through agg_032, pos_001 through pos_032
 # - Each cluster represents a different chess playing style
 # - Node count can be adjusted based on available computational resources
