Moved num_games config to cluster manager.

--- a/chess-federated-learning/config/cluster_topology.yaml
+++ b/chess-federated-learning/config/cluster_topology.yaml
@@ -23,6 +23,7 @@ clusters:
     description: "Tactical pattern recognition with focus on combinations, sacrifices, and sharp tactics"
     node_count: 4                   # Number of nodes for this cluster
     node_prefix: "agg"               # Prefix for node IDs (generates agg_001, agg_002, etc.)
+    games_per_round: 500             # Games per round for this cluster
     initial_model: "/home/fra/Uni/Thesis/main_repo/FedRL/storage/models/run_20251021_150512_442c0e3c/cluster_tactical/round_0050.pt"  # Resume from round 50
 
   # Positional playstyle cluster - focused on strategic, long-term planning
@@ -32,6 +33,7 @@ clusters:
     description: "Strategic, long-term planning with focus on endgame and positional puzzles"
     node_count: 4                    # Number of nodes for this cluster
     node_prefix: "pos"               # Prefix for node IDs (generates pos_001, pos_002, etc.)
+    games_per_round: 500             # Games per round for this cluster
     initial_model: "/home/fra/Uni/Thesis/main_repo/FedRL/storage/models/run_20251021_150512_442c0e3c/cluster_positional/round_0050.pt"  # Resume from round 50
 
 # Configuration notes:
