--- a/chess-federated-learning/config/nodes/puzzle_configs/agg_003.yaml
+++ b/chess-federated-learning/config/nodes/puzzle_configs/agg_003.yaml
@@ -27,6 +27,8 @@ logging:
   format: text
 puzzle:
   puzzle_database_path: /home/fra/Uni/Thesis/main_repo/FedRL/chess-federated-learning/data/databases/lichess_puzzles.csv.zst
+  redis_host: localhost
+  redis_port: 6381
   min_rating: 1600
   max_rating: 2400
   themes:
