modified server configs

--- a/chess-federated-learning/config/cluster_topology.yaml
+++ b/chess-federated-learning/config/cluster_topology.yaml
@@ -12,8 +12,8 @@
 #      - Offset data sampling so you use NEW data (not rounds 1-30 again)
 #      - Save new checkpoints starting from round 1 (but using data offset)
 resume_training:
-  enabled: true                     # Enable resume training
-  starting_round: 0                # Round number to resume from (affects data sampling offset)
+  enabled: false                     # Enable resume training
+  #starting_round: 0                # Round number to resume from (affects data sampling offset)
 
 clusters:
   # tactical playstyle cluster - focused on tactical patterns
@@ -23,8 +23,8 @@ clusters:
     description: "Tactical pattern recognition with focus on combinations, sacrifices, and sharp tactics"
     node_count: 4                   # Number of nodes for this cluster
     node_prefix: "agg"               # Prefix for node IDs (generates agg_001, agg_002, etc.)
-    games_per_round: 4000             # Games per round for this cluster
-    initial_model: "/home/fra/Uni/Thesis/main_repo/FedRL/storage/models/run_20251021_150512_442c0e3c/cluster_tactical/round_0050.pt"  # Resume from round 50
+    games_per_round: 200             # Games per round for this cluster
+    #initial_model: "/home/fra/Uni/Thesis/main_repo/FedRL/storage/models/run_20251021_150512_442c0e3c/cluster_tactical/round_0050.pt"  # Resume from round 50
 
   # Positional playstyle cluster - focused on strategic, long-term planning
   # Now training on positional/endgame puzzles from Lichess
@@ -33,8 +33,8 @@ clusters:
     description: "Strategic, long-term planning with focus on endgame and positional puzzles"
     node_count: 4                    # Number of nodes for this cluster
     node_prefix: "pos"               # Prefix for node IDs (generates pos_001, pos_002, etc.)
-    games_per_round: 4000             # Games per round for this cluster
-    initial_model: "/home/fra/Uni/Thesis/main_repo/FedRL/storage/models/run_20251021_150512_442c0e3c/cluster_positional/round_0050.pt"  # Resume from round 50
+    games_per_round: 200             # Games per round for this cluster
+    #initial_model: "/home/fra/Uni/Thesis/main_repo/FedRL/storage/models/run_20251021_150512_442c0e3c/cluster_positional/round_0050.pt"  # Resume from round 50
 
 # Configuration notes:
 # - Total nodes: 8 (4 tactical + 4 positional)
