--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,7 +40,7 @@ dev = [
 
 [tool.uv]
 index-strategy = "unsafe-best-match"
-extra-index-url = ["https://download.pytorch.org/whl/nightly/cu128"]
+extra-index-url = ["https://download.pytorch.org/whl/cu128"]
 
 [tool.pytest.ini_options]
 asyncio_mode = "auto"
