--- a/chess-federated-learning/config/server_config_P1.yaml
+++ b/chess-federated-learning/config/server_config_P1.yaml
@@ -1,5 +1,5 @@
-# Server Configuration for B1: Full Sharing Baseline
-# All layers are aggregated between clusters
+# Server Configuration for P1: Share Early Layers Only
+# Tests early feature extraction sharing while allowing independent specialization
 
 server_config:
   host: "localhost"
@@ -9,17 +9,36 @@ orchestrator_config:
   aggregation_threshold: 0.8
   timeout_seconds: 1200              # 20 minutes - increased for supervised training with real data
 
-  # B1: Share ALL layers (full aggregation)
-  # Input block + all residual blocks + policy head + value head
+  # P1: Share input layers + early residual blocks (0-5)
+  # Early layers capture basic board patterns - shared across playstyles
   shared_layer_patterns:
     - "input_conv.*"
     - "input_bn.*"
-    - "res_blocks.*"       # All 19 residual blocks
-    - "policy_head.*"      # Policy head shared
-    - "value_head.*"       # Value head shared
+    - "res_blocks.0.*"         # Residual blocks 0-5 (early feature extraction)
+    - "res_blocks.1.*"
+    - "res_blocks.2.*"
+    - "res_blocks.3.*"
+    - "res_blocks.4.*"
+    - "res_blocks.5.*"
 
-  # No cluster-specific patterns in B1 (everything is shared)
-  cluster_specific_patterns: []
+  # Cluster-specific: Middle/late residual blocks and heads
+  # These layers develop playstyle-specific abstractions
+  cluster_specific_patterns:
+    - "res_blocks.6.*"         # Residual blocks 6-18 (middle and late layers)
+    - "res_blocks.7.*"
+    - "res_blocks.8.*"
+    - "res_blocks.9.*"
+    - "res_blocks.10.*"
+    - "res_blocks.11.*"
+    - "res_blocks.12.*"
+    - "res_blocks.13.*"
+    - "res_blocks.14.*"
+    - "res_blocks.15.*"
+    - "res_blocks.16.*"
+    - "res_blocks.17.*"
+    - "res_blocks.18.*"
+    - "policy_head.*"          # Policy head cluster-specific
+    - "value_head.*"           # Value head cluster-specific
 
 # Playstyle evaluation configuration
 evaluation_config:
